2016-October-16 Struan Robertson

		* FourierGrid1D.cpp: Initial outline implementation of the Fourier Grid methods for 
		the states of an anharmonic oscillators.

		* Morse.cpp: Minor tidy.
		
2016-July-17 Struan Robertson

		* System.h/.cpp: Altered to print out the results of fitting the trace data.

		* TMattix.h: Minor optimization.
		
2016-July-17 Struan Robertson

		* System.cpp, MesmerFlags.h/.cpp, FittingUtils.cpp, OH_acetylene_rawdata.xml: Trace data
		analysis altered to account for lack of independent experimental error estimates.
		
2016-May-15 Struan Robertson

		* System.cpp, OH_acetylene_rawdata.xml: Minor changes to experimental trace fitting.
		
2016-May-14 Struan Robertson

		* ConditionsManager.cpp/.h, CollisionOperator.cpp/.h, System.cpp, OH_acetylene_rawdata.xml: 
		Initial revision of experimental trace fitting.
		
2016-May-02 Struan Robertson

		* System.h: Version update.
		
		* Reaction.h, DiffusiveLossReaction.h/.cpp: Initial revision of diffusive loss term.

2016-February-19 Chris Morley

	* Windows VC14/distribution/NSISScriptToCreateInstaller.nsi:
	  Update. Runtime library is now called vc_redist.x86.exe
	
	* Windows VC14/distribution/ReadMe.txt: add Robin.

2016-February-18 Struan Robertson

		* Constants.h: Altered standard pressure to one bar.
		
		* MesmerEnv.cpp: Altered default value of cell number to 50000.

		* Documentation updates.
		
		* Baselines updates. 

2016-February-14 Struan Robertson

		* AnalyticalRepresentation.cpp: Inverted the max and min temperature ranges to be
		consistent with Chemkin and Cantera formalism. 

2016-February-08 Struan Robertson

		* Documentation corrections.

2016-February-07 Chris Morley

	* src/plugins/AnalyticalRepresentation.cpp,src/plugins/BeyerSwinehart.cpp,
	src/plugins/BoltzmannDistribution.cpp,src/plugins/ClassicalRotor.cpp
	src/plugins/DefinedTunnelingCoefficients.cpp,src/plugins/EckartCoefficients.cpp