@@ -460,8 +460,7 @@ namespace mesmer
     }
 
     if (threshold < RxnHeat){
-      cerr << "E_infinity should be equal to or greater than the heat of reaction in ILT.";
-      exit(1);
+			throw(std::runtime_error("E_infinity should be equal to or greater than the heat of reaction in ILT."));
     }
 
     return threshold ;
